# SDLplayerCore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/: README.md
.github/workflows/: build.yml
docs/: CHALLENGES.md  DESIGN.md
docs/assets/: finite_state_machine.drawio  finite_state_machine.md  flow-basic-architecture.drawio  flow-basic-architecture.md  flow-initialization.drawio  flow-initialization.md  flow-overall-core.drawio  flow-overall-core.md  pic10-shutdown_resource_release_order.drawio  pic10-shutdown_resource_release_order.md  pic2-basic_architecture.drawio  pic2-basic_architecture.md  pic3-detailed_core_architecture.drawio  pic3_1-initialization_flowchart.drawio  pic3_1-initialization_flowchart.md  pic3_2-overall_core_flowchart.drawio  pic3_2-overall_core_flowchart.md  pic4-queue_producer_block.drawio  pic4-queue_thread-producer_block.md  pic5-queue_thread-consumer_block.drawio  pic5-queue_thread-consumer_block.md  pic6-audio_video_sync_thread.drawio  pic6-audio_video_sync_thread.md  pic7-video_render_refresh_flowchart.drawio  pic7-video_render_refresh_flowchart.md  pic8-pause_resume_thread.md  pic9-shutdown_thread_join_order.drawio  pic9-shutdown_thread_join_order.md  sequence-av-sync.drawio  sequence-av-sync.md  sequence-graceful-shutdown.drawio  sequence-graceful-shutdown.md  sequence-pause-resume.drawio  sequence-queue-producer-block.drawio  sequence-queue-producer-block.md
src/include/: ClockManager.h  FFmpegAudioDecoder.h  FFmpegDemuxer.h  FFmpegVideoDecoder.h  FrameQueue.h  IAudioDecoder.h  IAudioRenderer.h  IClockManager.h  IDemuxer.h  IVideoDecoder.h  IVideoRenderer.h  MediaPlayer.h  OSDLayer.h  PacketQueue.h  PlayerDebugStats.h  SDLAudioRenderer.h  SDLVideoRenderer.h
src/source/: ClockManager.cpp  FFmpegAudioDecoder.cpp  FFmpegDemuxer.cpp  FFmpegVideoDecoder.cpp  FrameQueue.cpp  MediaPlayer.cpp  PacketQueue.cpp  SDLAudioRenderer.cpp  SDLVideoRenderer.cpp  main.cpp  testPlayer.cpp
